<resources>
    <string name="app_name">TFG1</string>
    <string name="title_activity_main_m_a_p">Mapa</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_p_cercanos">Puntos cercanos</string>
    <string name="text_verifiacdo">Verificado</string>
    <string name="title_buscar">Buscar</string>
    <string name="title_user">Usuario</string>
    <string name="title_correo">Correo</string>
    <string name="title_contraseña">Contraseña</string>
    <string name="title_c">Correo</string>
    <string name="title_aut">Autonomía - km</string>
    <string name="title_op_usuario">Opciones de usuario</string>
    <string name="b_sesion">Cerrar sesión</string>
    <string name="h_cont">Contraseña</string>
    <string name="h_new_cont">Nueva contraseña</string>
    <string name="c_confirmar_Cont">Confirma tu contraseña para realizar esta acción</string>
    <string name="b_confirmar">Confirmar</string>
    <string name="b_cancelar">Cancelar</string>
    <string name="toast_error_login">Datos inválidos</string>
    <string name="toast_succes_login">Correnciales correctas, cambio realizado</string>
    <string name="toast_no_pass">Introduzca su contraseña</string>
    <string name="toast_empty_email">Especifique un nuevo email antes de continuar</string>
    <string name="toast_empty_pass">Especifique una nueva contraseña antes de continuar</string>
    <string name="toast_empty_aut">Especifique una nueva autonomía antes de continuar</string>
    <string name="toast_recovery">Revise su correo para recuperar su contraseña</string>
    <string name="title_recovery">Recuperar contraseña</string>
    <string name="d_del_acct">Realizando esta acción borrarás tu cuenta, ¿deseas continuar?</string>
    <string name="d_del_punt">Realizando esta acción borrarás esta puntuación, ¿deseas continuar?</string>
    <string name="d_del_PR">Realizando esta acción borrarás este punto de recarga, ¿deseas continuar?</string>
    <string name="d_del_PR_Report">Realizando esta acción reportarás este punto de recarga, ¿deseas continuar?</string>
    <string name="title_tipo">Escoge un tipo</string>
    <string name="h_nombre">Escribe un nombre</string>
    <string name="title_nombre">Nombre</string>
    <string name="title_loc">Localización</string>
    <string name="h_lat">Latitud</string>
    <string name="h_lon">Longitud</string>
    <string name="h_desc">Descripción (opcional)</string>
    <string name="b_publicar">Publicar</string>
    <string name="title_nuevo">Nuevo</string>
    <string name="title_info">Info</string>
    <string name="toast_nuevo_fill_fields">Rellena todo los campos necesarios antes de continuar</string>
    <string name="toast_nuevo_already_exists">Ya existe un punto de recarga en esa localización</string>
    <string name="toast_nuevo_added">Punto de recarga publicado</string>
    <string name="b_info_go">Ir allí</string>
    <string name="b_info_punt">Puntuar</string>
    <string name="title_punt">Puntuaciones</string>
    <string name="title_give_punt">Selecciona una puntuación</string>
    <string name="h_op">Opinión (opcional)</string>
    <string name="title_puntuar">Puntuar</string>
    <string name="title_modificar">Modificar</string>
    <string name="toast_punt_publicada">Puntuación actualizada</string>
    <string name="toast_punt_error">Error al publicar la puntuación</string>
    <string name="toast_PR_eliminado">Punto de recarga eliminado</string>
    <string name="toast_PR_report">Punto de recarga reportado</string>
    <string name="toast_PR_report_error">No se ha podido reportar el punto de recarga</string>
    <string name="toast_error_gen">Error, es posible que haya problemas con tu conectividad</string>
    <string name="toast_lat_lon">Latitud o longitud inválidas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
