<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="myVM"
            type="es.usal.tfg1.vm.VM" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize"
            tools:context=".ViewC.MAPA.nuevo.nuevo">

            <ProgressBar
                android:id="@+id/progressBar_p_cercanos"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="@{myVM.nuevoLoadingVisibility ? View.VISIBLE : View.INVISIBLE}"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{myVM.nuevoLoadingVisibility ? View.INVISIBLE : View.VISIBLE}">
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/nuevo_guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/nuevo_guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.10" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/nuevo_guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.90" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nuevo_constraint1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/nuevo_guideline2"
                    app:layout_constraintRight_toLeftOf="@id/nuevo_guideline3"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nuevo_tipo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/title_tipo"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        />

                    <FrameLayout
                        android:id="@+id/nuevo_frameLayout_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/nuevo_tipo"
                        app:layout_constraintBottom_toTopOf="@id/nuevo_separador"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:background="@{myVM.nuevoBOutline1 ? @drawable/r_border_t : @drawable/transparent}">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/nuevo_charger_n"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/charger_n"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="15dp" />

                    </FrameLayout>


                    <FrameLayout
                        android:id="@+id/nuevo_frameLayout_g"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/nuevo_tipo"
                        app:layout_constraintBottom_toTopOf="@id/nuevo_separador"
                        app:layout_constraintRight_toRightOf="parent"
                        android:background="@{myVM.nuevoBOutline2 ? @drawable/r_border_t : @drawable/transparent}">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/nuevo_charger_g"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/green"
                            android:layout_marginVertical="5dp"
                            android:layout_marginHorizontal="15dp"
                            />
                    </FrameLayout>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/nuevo_separador"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/colorLightGrey"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nuevo_frameLayout_g"
                        android:layout_marginTop="8dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nuevo_constraint2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/nuevo_guideline2"
                    app:layout_constraintRight_toLeftOf="@id/nuevo_guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/nuevo_constraint1"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nuevo_nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_nombre"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nuevo_nombe_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nuevo_nombre"
                        android:hint="@string/h_nombre"
                        android:layout_marginHorizontal="15dp"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/nuevo_separador2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorLightGrey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nuevo_nombe_editText"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nuevo_constraint3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/nuevo_guideline2"
                    app:layout_constraintRight_toLeftOf="@id/nuevo_guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/nuevo_constraint2"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nuevo_loc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_loc"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nuevo_lat_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toLeftOf="@id/nuevo_lon_editText"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nuevo_loc"
                        android:hint="@string/h_lat"
                        android:layout_marginHorizontal="15dp"
                        android:gravity="center"
                        android:inputType="numberDecimal"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nuevo_lon_editText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/nuevo_lat_editText"
                        app:layout_constraintTop_toBottomOf="@id/nuevo_loc"
                        android:hint="@string/h_lon"
                        android:layout_marginHorizontal="15dp"
                        android:gravity="center"
                        android:inputType="numberDecimal"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/nuevo_separador3"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorLightGrey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nuevo_lat_editText"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nuevo_constraint4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/nuevo_guideline2"
                    app:layout_constraintRight_toLeftOf="@id/nuevo_guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/nuevo_constraint3"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:counterEnabled="true"
                        app:counterMaxLength="300"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="top"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nuevo_descripcion_editText"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:hint="@string/h_desc"
                            android:gravity="top"
                            android:maxLength="300"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nuevo_b_crear"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/b_publicar"
                    android:textColor="@color/textColor"
                    app:layout_constraintTop_toBottomOf="@id/nuevo_constraint4"
                    app:layout_constraintLeft_toRightOf="@id/nuevo_guideline2"
                    app:layout_constraintRight_toLeftOf="@id/nuevo_guideline3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="18sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>
</layout>