<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="myVM"
            type="es.usal.tfg1.vm.VM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ViewC.fragmentos.info.info">

            <ProgressBar
                android:id="@+id/progressBar_p_info"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="@{myVM.infoLoadingVisibility ? View.VISIBLE : View.INVISIBLE}"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_info_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_info_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/PR_info_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@{myVM.infoPR.eco ?  @drawable/green : @drawable/charger_n}"
                    app:layout_constraintLeft_toRightOf="@id/guideline_info_1"
                    app:layout_constraintBottom_toBottomOf="@id/PR_info_rating_bar"
                    android:layout_margin="5dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/PR_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/PR_info_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/PR_info_icon"
                    android:layout_marginBottom="15dp"
                    android:text="@{myVM.infoPR.nombre}"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="15dp"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/PR_info_rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/PR_info_name"
                    app:layout_constraintLeft_toRightOf="@id/PR_info_icon"
                    android:numStars="5"
                    android:isIndicator="true"
                    android:scaleX="0.85"
                    android:scaleY="0.85"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp"
                    android:layout_marginStart="12dp"
                    android:rating="@{myVM.infoPR.puntuacion}"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/PR_info_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/r_border"
                    android:text="@{myVM.infoPR.distancia}"
                    app:layout_constraintRight_toLeftOf="@id/guideline_info_2"
                    app:layout_constraintLeft_toRightOf="@id/PR_info_rating_bar"
                    app:layout_constraintBottom_toBottomOf="@id/PR_info_rating_bar"
                    app:layout_constraintTop_toTopOf="@id/PR_info_name"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/info_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_modificar"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/PR_info_rating_bar"
                    app:layout_constraintLeft_toLeftOf="@id/PR_info_name"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="5dp"
                    android:visibility="@{myVM.infoUserCanDel ? View.VISIBLE : View.INVISIBLE}"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/info_desc_layoutConst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/info_mod"
                    app:layout_constraintLeft_toRightOf="@id/guideline_info_1"
                    app:layout_constraintRight_toLeftOf="@id/guideline_info_2">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/info_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{myVM.infoPR.descripcion}"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginHorizontal="25dp">
                    </com.google.android.material.textview.MaterialTextView>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_info_go"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_background_min"
                    android:text="@string/b_info_go"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintLeft_toRightOf="@id/guideline_info_1"
                    app:layout_constraintTop_toBottomOf="@id/info_desc_layoutConst"
                    android:layout_margin="15dp"
                    app:layout_constraintRight_toLeftOf="@id/button_info_punt"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_info_punt"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_background"
                    android:text="@string/b_info_punt"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintRight_toLeftOf="@id/guideline_info_2"
                    app:layout_constraintTop_toBottomOf="@id/info_desc_layoutConst"
                    app:layout_constraintLeft_toRightOf="@id/button_info_go"
                    android:layout_margin="15dp"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/button_Del_PR"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:layout_constraintLeft_toRightOf="@id/guideline_info_1"
                    app:layout_constraintRight_toLeftOf="@id/guideline_info_2"
                    app:layout_constraintTop_toBottomOf="@+id/button_info_punt"
                    android:layout_marginBottom="8dp"
                    android:layout_margin="15dp"
                    android:src="@{myVM.infoUserCanDel ?  @drawable/ic_delete : @drawable/ic_error_outline}"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/separator_PR_info"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorLightGrey"
                    app:layout_constraintLeft_toRightOf="@id/guideline_info_1"
                    app:layout_constraintRight_toLeftOf="@id/guideline_info_2"
                    app:layout_constraintTop_toBottomOf="@id/button_Del_PR"
                    android:layout_margin="15dp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/PR_info_punt_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/guideline_info_1"
                    app:layout_constraintRight_toLeftOf="@id/guideline_info_2"
                    app:layout_constraintTop_toBottomOf="@id/separator_PR_info"
                    android:layout_marginVertical="25dp"
                    android:text="@string/title_punt"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="15dp"
                    android:textSize="22sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_p_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/PR_info_punt_text"
                    app:layout_constraintLeft_toRightOf="@id/guideline_info_1"
                    app:layout_constraintRight_toLeftOf="@id/guideline_info_2"
                    android:layout_marginTop="15dp">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>